Fixed error when deleting an issue with file #17